--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next-intl": "^3.13.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-select": "^5.8.0"
   },
   "devDependencies": {
