--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.4",
     "next": "14.2.3",
     "next-intl": "^3.13.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "react-select": "^5.8.0"
   },
   "devDependencies": {
