--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
