--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.3.6",
     "@reduxjs/toolkit": "^2.2.4",
+    "framer-motion": "^11.2.4",
     "next": "14.2.3",
     "next-intl": "^3.13.0",
     "react": "^18",
