--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.0.4",
+    "@heroicons/react": "^2.1.3",
     "@nextui-org/react": "^2.3.6",
     "@reduxjs/toolkit": "^2.2.4",
     "framer-motion": "^11.2.4",
@@ -19,6 +21,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-select": "^5.8.0",
+    "react-signature-canvas": "^1.0.6",
     "redux-persist": "^6.0.0",
     "server-only": "^0.0.1"
   },
