--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.3",
     "@nextui-org/react": "^2.3.6",
     "@reduxjs/toolkit": "^2.2.4",
+    "firebase": "^10.13.0",
     "framer-motion": "^11.2.4",
     "next": "14.2.3",
     "next-intl": "^3.13.0",
@@ -23,7 +24,9 @@
     "react-select": "^5.8.0",
     "react-signature-canvas": "^1.0.6",
     "redux-persist": "^6.0.0",
-    "server-only": "^0.0.1"
+    "server-only": "^0.0.1",
+    "uuid": "^10.0.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/node": "^20",
