continue working on patient dynamic page, cleaned code and made it typescript compatible without syntax errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
       "@/components": ["./app/[locales]/components"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "next.config.mjs", "public/constants/languages.ts", "lib/hooks.ts", "lib/store.ts", "app/[locales]/StoreProvider.tsx", "app/[locales]/global/hostApi.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "next.config.mjs", "public/constants/languages.ts", "lib/hooks.ts", "lib/store.ts", "app/[locales]/StoreProvider.tsx", "public/constants/hostApi.ts"],
   "exclude": ["node_modules"]
 }
