--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@heroicons/react": "^2.1.3",
     "@nextui-org/react": "^2.3.6",
     "@reduxjs/toolkit": "^2.2.4",
+    "@types/clientjs": "^0.2.2",
+    "@types/react-signature-canvas": "^1.0.5",
     "clientjs": "^0.2.1",
     "firebase": "^10.13.0",
     "framer-motion": "^11.2.4",
